[tool.poetry]
name = "metryczki"
version = "0.1.0"
description = ""
authors = ["Mateusz Stankiewicz <mati.stankiewicz+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyLaTeX = "^1.4.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
